# OpenRA-Rust

./: .gitignore  Cargo.toml  Dockerfile  INTEGRATION_REPORT.md  PARITY_PLAN.md  PLAN.md  PLAN_STRATEGY_SCENARIOS.md  README_PY.md  STATUS_INTEGRATION_STRATEGY.md  STATUS_PHASE_1_2.md  STATUS_PHASE_3.md  STATUS_PHASE_4.md  STATUS_PHASE_5.md  STATUS_PHASE_6.md  STATUS_PHASE_7.md  STATUS_PHASE_8.md  VENDOR_DATA.md  docker-compose.yaml  pyproject.toml  spec-nuke-strike.yaml
docs/: ARCHITECTURE.md
openra-data/: Cargo.toml
openra-data/examples/: dump_rules_json.rs  extract_sprites.rs
openra-data/src/: aud.rs  blowfish.rs  embedded.rs  lib.rs  miniyaml.rs  mix.rs  oramap.rs  orarep.rs  rules.rs  shp.rs  tmp.rs
openra-data/tests/: asset_loading.rs  cross_impl_rules.rs  debug_palette.rs  debug_shp.rs  debug_tmp.rs  extract_icons.rs  extract_infantry.rs  extract_sprites.rs  extract_syncinfo.rs  find_infantry.rs  map_parse.rs  (+25 more)
openra-sim/: Cargo.toml
openra-train/: Cargo.toml  pyproject.toml
openra-train/src/: command.rs  env.rs  lib.rs  observation.rs
openra-train/tests/: bench_throughput.rs  determinism.rs  env_attaches_turret.rs  env_basic.rs  env_cargo.rs  env_commands.rs  env_determinism.rs  env_economy.rs  env_guard.rs  env_harvest.rs  env_holdfire.rs  env_interrupt_production.rs  env_no_enemy.rs  env_scripted_bot.rs  env_set_primary.rs  env_spatial.rs  env_stance.rs  env_step_move.rs  env_storage.rs  env_surrender.rs  env_terminal.rs  env_termination_flags.rs  env_visible_cells.rs  scout_maginot_smoke.rs  test_max_ticks_unbounded.rs
openra-wasm/: Cargo.toml
openra-wasm/src/: lib.rs
openra-wasm/www/: index.html  index.js
scenarios/: combat-heli-flank.yaml
scripts/: dump_csharp_combat_trace.py  dump_csharp_move_trace.py  dump_csharp_rules.py  local_16_episode_smoke.py  parity_smoke_rust_vs_csharp.py  smoke_strategy_all_scenarios.py  smoke_strategy_phase6.py  smoke_strategy_phase7.py  smoke_strategy_phase8.py
(+104 files in other folders)
