[package]
name = "openra-train"
description = "Training runtime — 128 parallel game simulations for RL agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openra_train"
# `cdylib` is needed for the Python extension module; `rlib` keeps the
# crate usable from regular Rust integration tests in this workspace.
crate-type = ["cdylib", "rlib"]

[dependencies]
openra-sim = { path = "../openra-sim" }
openra-data = { path = "../openra-data" }
pyo3 = { version = "0.22", features = ["abi3-py39"], optional = true }

[features]
# Default: pure-Rust build; `cargo build`/`cargo test` work without a
# Python interpreter installed. Maturin enables the `python` feature
# (which adds `extension-module` + the cdylib hookup).
default = []
python = ["dep:pyo3", "pyo3/extension-module"]
